--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.feigdev.hearty.app.MainActivity" >
+    tools:context="io.hearty.hearty.app.MainActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
